# cloud-security-posture-auditor

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
config/: settings.yaml
src/cloud_audit/: __init__.py  bootstrap.py  cli.py  config.py  health.py  markdown.py  scan.py
